   "Draw by stalemate": 3
   "Loss: Black mates": 62
   "Loss: White mates": 74
   "No result": 5
   "Win: Black mates": 58
   "Win: White mates": 68

Rank * 10 Bonus for Passed Pawns

Score of midnight-dev vs midnight-latest: 417 - 340 - 243 [0.538]
...      midnight-dev playing White: 193 - 194 - 113  [0.499] 500
...      midnight-dev playing Black: 224 - 146 - 130  [0.578] 500
...      White vs Black: 339 - 418 - 243  [0.461] 1000
Elo difference: 26.8 +/- 18.8, LOS: 99.7 %, DrawRatio: 24.3 %
1000 of 1000 games finished.

Player: midnight-dev
   "Draw by 3-fold repetition": 163
   "Draw by adjudication": 1
   "Draw by fifty moves rule": 19
   "Draw by insufficient mating material": 55
   "Draw by stalemate": 5
   "Loss: Black mates": 194
   "Loss: White mates": 146
   "Win: Black mates": 224
   "Win: White mates": 193
Player: midnight-latest
   "Draw by 3-fold repetition": 163
   "Draw by adjudication": 1
   "Draw by fifty moves rule": 19
   "Draw by insufficient mating material": 55
   "Draw by stalemate": 5
   "Loss: Black mates": 224
   "Loss: White mates": 193
   "Win: Black mates": 194
   "Win: White mates": 146

Isolated Pawn Penalty
Score of midnight-dev vs midnight-latest: 1006 - 893 - 678  [0.522] 2577
...      midnight-dev playing White: 535 - 412 - 342  [0.548] 1289
...      midnight-dev playing Black: 471 - 481 - 336  [0.496] 1288
...      White vs Black: 1016 - 883 - 678  [0.526] 2577
Elo difference: 15.2 +/- 11.5, LOS: 99.5 %, DrawRatio: 26.3 %
SPRT: llr 2.97 (100.8%), lbound -2.94, ubound 2.94 - H1 was accepted

Bishop Bonus
Score of midnight-dev vs midnight-latest: 4697 - 4442 - 3307  [0.510] 12446
...      midnight-dev playing White: 2425 - 2160 - 1638  [0.521] 6223
...      midnight-dev playing Black: 2272 - 2282 - 1669  [0.499] 6223
...      White vs Black: 4707 - 4432 - 3307  [0.511] 12446
Elo difference: 7.1 +/- 5.2, LOS: 99.6 %, DrawRatio: 26.6 %
SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted