@@ -433,3 +433,11 @@ Score of midnight-dev vs midnight-latest: 4697 - 4442 - 3307  [0.510] 12446
 ...      White vs Black: 4707 - 4432 - 3307  [0.511] 12446
 Elo difference: 7.1 +/- 5.2, LOS: 99.6 %, DrawRatio: 26.6 %
 SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted
+
+Tuned PSTs and Other penalties etc.
+Score of midnight-dev vs midnight-pesto: 875 - 677 - 448 [0.549]
+...      midnight-dev playing White: 453 - 322 - 225  [0.566] 1000
+...      midnight-dev playing Black: 422 - 355 - 223  [0.533] 1000
+...      White vs Black: 808 - 744 - 448  [0.516] 2000
+Elo difference: 34.5 +/- 13.4, LOS: 100.0 %, DrawRatio: 22.4 %
+
